# miniflow

./: .gitignore  README.md  pyproject.toml
miniflow/: accuracy.py  activations.py  core.py  layers.py  loss.py  optimizers.py
