[tool.poetry]
name = "NN_from_scratch"
version = "0.1.0"
description = ""
authors = ["Yash Rathi <yashrathicricket@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.4"
nnfs = "^0.5.1"
matplotlib = "^3.5.0"
rich = "^10.14.0"  # For terminal progress bar also compatible with ipython notebooks

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
